--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@
         /* blue container */
 
       .men-image {
-    background-image: url("image/home/blue-box.png"); 
+    background-image: url('image/home/blue-box.png'); 
     background-size: cover;
     background-position: center;
     height: 350px;
@@ -385,7 +385,7 @@
 @media (max-width: 768px) {
     .text-content h1 {
                 margin-top: -55px;
-        text-align: center;
+        text-align: unset;
         font-size: 12px;
 
     }
@@ -395,11 +395,12 @@
      height: 165px !important;
     }
     .btn-custom {
-    background-color: #00C853; /* Bright Green */
-    color: white;
-    border-radius: 42px; /* Pill shape */
-   padding: 5px 2px;
-    font-weight: 600;
+           background-color: #00C853;
+        color: white;
+        border-radius: 42px;
+        padding: 6px 9px;
+        font-weight: 500;
+        font-size: 10px;
    
 }
 
@@ -494,8 +495,8 @@
         }
         .feature-btn {
     border: 1px solid #e5e5e5;
-    padding: 12px 24px;
-    border-radius: 40px;
+    padding: 12px 35px;
+    border-radius: 13px;
     background: #fff;
     font-size: 14px;
     margin: 8px;
@@ -595,15 +596,20 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 460px;
+    height: 533px;
     position: relative;
     padding: 40px 0;
 }
 
 /* Text styling */
 .trusted-number {
-    font-size: 55px;
+    font-size: 65px;
     font-weight: 700;
+}
+.gradient-text {
+     background: linear-gradient(99deg, #F9AD1B 2.36%, #FFECC9 100.66%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .trusted-text {
@@ -657,9 +663,9 @@
 
         /* Icon circle */
         .icon-circle {
-            width: 55px;
+            width: 60px;
             height: 55px;
-            background: #f3f3f3;
+            background: #ffffff;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -667,7 +673,7 @@
         }
 
         .icon-circle img {
-            width: 80%;
+            width: 100%;
             height: auto;
         }
 
